# Router

./: README.md  app.py  pyproject.toml
Delivery-Clustering/: ClusteringOrders.py  Matching.py
Delivery-Router/: DeliveryRouter.py  GraphGenerator.py
GeneticAlgorithm/: City.py  GeneticAlgorithm.py  Individuals.py
Notebooks/: 00.Exploratorio.ipynb  01.Montagem_da_Base.ipynb  02.1.PoC_KMeans.ipynb  02.2.PoC_Matching.ipynb  03.Graph_Generator.ipynb  04.PoC_Algoritmo_Genetico.ipynb  06.Aplicacao_Estudos_Futuros_Clustering.ipynb
Notebooks/Bases/: 04_Resultado_da_Clusterização_e_Matching.csv  Entregadores__c.csv  Entregadores__c_2.csv  PoC_Algoritmo_Genetico_resultado.csv  SolicitacaoEntrega__c_with_clusters.csv  deliveryman_geolocations.csv  order_items.csv
Notebooks/Bases/01.Montagem_da_Base/: customer_geolocations.csv  orders.csv  sellers_geolocation.csv
Notebooks/Bases/01.Montagem_da_Base/BD_Salesforce/: SolicitacaoEntrega__c.csv
Notebooks/Bases/PoC_Algoritmo_Genetico_resultado/: df_teste_4_agg.csv  df_teste_4_iter_0.csv  df_teste_4_iter_1.csv  df_teste_4_iter_2.csv  df_teste_4_iter_3.csv  df_teste_4_iter_4.csv  df_teste_4_iter_5.csv  df_teste_4_iter_6.csv  df_teste_4_iter_7.csv  df_teste_4_iter_8.csv  df_teste_4_iter_9.csv  resultados_google_2.csv
SalesforceAPI/: SalesforceAPI.py
