[tool.poetry]
name = "router"
version = "0.1.0"
description = ""
authors = ["William Rocha de Oliveira <william.r.o.wro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
sklearn = "^0.0"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
